name:           ReflexLab
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/aidatorajiro/ReflexLab#readme>
homepage:       https://github.com/aidatorajiro/ReflexLab#readme
bug-reports:    https://github.com/aidatorajiro/ReflexLab/issues
author:         Torajiro Aida
maintainer:     kawarusosu@zoho.com
copyright:      2018 Torajiro Aida
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/aidatorajiro/ReflexLab

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , file-embed
    , ghcjs-base
    , random
    , reflex
    , reflex-dom
    , safe
    , text
  exposed-modules:
      Lib
      LibReflex
      LibTree
      NameDB
      Nested
  other-modules:
      Paths_ReflexLab
  default-language: Haskell2010

executable ReflexLab-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ReflexLab
    , base >=4.7 && <5
    , containers
    , file-embed
    , ghcjs-base
    , random
    , reflex
    , reflex-dom
    , safe
    , text
  other-modules:
      Paths_ReflexLab
  default-language: Haskell2010
